Updated imgs names and added img 211

--- a/index.html
+++ b/index.html
@@ -16,30 +16,34 @@
 	</head>
 
 	<body>
+
 		<div class="container">
 			<div id="bannerSlider" class="row-fluid carousel slide">
 				<!-- Carousel items -->
 				<div class="carousel-inner" id="carouselSlider">
 					<div class="active">
-						<a href="#"><img src="img/DSC_0134-XL.jpg" /></a>
+						<a href="#"><img src="img/DSC_0134.jpg" /></a>
 					</div>
 					<div>
-						<a href="#"><img src="img/DSC_0137-XL.jpg" /></a>
+						<a href="#"><img src="img/DSC_0137.jpg" /></a>
 					</div>
 					<div>
-						<a href="#"><img src="img/DSC_0192-XL.jpg" /></a>
+						<a href="#"><img src="img/DSC_0192.jpg" /></a>
 					</div>
 					<div>
-						<a href="#"><img src="img/DSC_0213-XL.jpg" /></a>
+						<a href="#"><img src="img/DSC_0213.jpg" /></a>
 					</div>
 					<div>
-						<a href="#"><img src="img/DSC_0263-XL.jpg" /></a>
+						<a href="#"><img src="img/DSC_0263.jpg" /></a>
 					</div>
 					<div>
-						<a href="#"><img src="img/DSC_0266-XL.jpg" /></a>
+						<a href="#"><img src="img/DSC_0266.jpg" /></a>
 					</div>
 					<div>
-						<a href="#"><img src="img/DSC_0280-XL.jpg" /></a>
+						<a href="#"><img src="img/DSC_0280.jpg" /></a>
+					</div>
+					<div>
+						<a href="#"><img src="img/DSC_0211.jpg" /></a>
 					</div>
 				</div>
 				<!-- Carousel nav -->
