Modified style-names and fixed controls.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 	<body>
 
 		<div class="container">
-			<div id="bannerSlider" class="row-fluid carousel slide">
-				<!-- Carousel items -->
-				<div class="carousel-inner" id="carouselSlider">
+			<div id="bannerSlider" class="row-fluid slider slide">
+				<!-- skippy items -->
+				<div class="slider-inner" id="skippySlider">
 					<div class="active">
 						<a href="#"><img src="img/DSC_0134.jpg" /></a>
 					</div>
@@ -46,10 +46,10 @@
 						<a href="#"><img src="img/DSC_0211.jpg" /></a>
 					</div>
 				</div>
-				<!-- Carousel nav -->
+				<!-- slider nav -->
 				<div id="steering">
-					<a class="carousel-control left" href="#" id="slide-left">&lsaquo;</a>
-					<a class="carousel-control right" href="#" id="slide-right">&rsaquo;</a>
+					<a class="slider-control left" href="#" id="slide-left">&lsaquo;</a>
+					<a class="slider-control right" href="#" id="slide-right">&rsaquo;</a>
 				</div>
 			</div>
 			<div class="row-fluid">
